--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Scanner</string>
+    <string name="upload_image">Click Me</string>
+    <string name="camera">imageupload</string>
 </resources>
