retrive text from image using google firebase ml kit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Scanner</string>
     <string name="upload_image">Click Me</string>
     <string name="camera">imageupload</string>
+    <string name="copy">Copy</string>
+    <string name="new_scan">New scan</string>
+    <string name="share">Share</string>
 </resources>
