ic_launcher icon

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="copy">Copy</string>
     <string name="new_scan">New scan</string>
     <string name="share">Share</string>
+    <string name="fb_banner_id">341704926512978_341705866512884</string>
+
 </resources>
