--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="new_scan">New scan</string>
     <string name="share">Share</string>
     <string name="fb_banner_id">341704926512978_341705866512884</string>
+    <string name="policy">Policy</string>
 
 </resources>
